@@ -43,7 +43,10 @@
 							<include name="toolbarButtonGraphics/general/New.gif"/>
 						</zipfileset> 
                         <zipfileset src="${lib.dir}/RMGraphics.jar"/>
-                		<zipfileset src="${lib.dir}/l2fprod-common-directorychooser.jar" includes="**/*.class"/>
+                		<zipfileset src="${lib.dir}/l2fprod-common-directorychooser.jar">
+                			<include name="com/l2fprod/common/**/*.*"/>
+                			<exclude name="com/l2fprod/common/demo/**/*.*"/>
+                		</zipfileset>
                 </jar>
                 <java classpath="RemoteMaster.jar" classname="com.hifiremote.jp1.RemoteMaster" outputproperty="rmversion">
                         <arg value="-version" />
