@@ -46,7 +46,12 @@ public class SettingsTableModel extends JP1TableModel< Setting > implements Cell
    */
   public int getColumnCount()
   {
-    return colNames.length;
+    int count = colNames.length - 1;
+    if ( remoteConfig != null && remoteConfig.allowHighlighting() )
+    {
+      ++count;
+    }
+    return count;
   }
 
   /** The Constant colNames. */
